fix: remove play button on mobile

--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -62,3 +62,10 @@ $default-font-size: 62.5%;
 .swiper-vertical > .swiper-pagination-bullets {
   right: 0;
 }
+
+video::-webkit-media-controls,
+video::-moz-media-controls,
+video::-o-media-controls,
+video::-ms-media-controls {
+  display: none !important;
+}
